# liferay-workspace-object-visualizer

./: .gitignore  Dockerfile  README.md  client-extension.yaml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: tauri-build.yml
.opencode/: opencode.jsonc
client-extensions/object-visualizer-custom-element/: AGENTS.md  Dockerfile  README.md  client-extension.dev.yaml  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
client-extensions/object-visualizer-custom-element/src/: index.css  main.tsx  routeTree.gen.ts
client-extensions/object-visualizer-custom-element/src-tauri/: Cargo.toml  tauri.conf.json
client-extensions/object-visualizer-custom-element/src-tauri/icons/: icon.icns
client-extensions/object-visualizer-custom-element/src-tauri/src/: lib.rs  main.rs  server.rs
src/: main.tsx  routeTree.gen.ts
src-tauri/src/: main.rs  server.rs
src/components/: environment-setup.tsx  export-import-dialog.tsx  generic-data-table.tsx  schema-viewer.tsx  sidebar.tsx
src/components/__tests__/: database-browser.spec.tsx  dynamic-table.spec.tsx  environment-setup.spec.tsx  notification-templates.spec.tsx
src/components/email/: email-preview.tsx  email-render.tsx  email-template-editor.tsx  recipient-manager.tsx
src/constants/: siteInitializers.ts
src/core/: tailwind-ui.ts  tanstack-router.tsx
src/hooks/: use-scroll.ts  use-toast.ts  use-variables.ts
src/lib/: db.ts  liferay.ts  tauri-client.ts  utils.ts
src/routes/: __root.tsx  environments.tsx
(+89 files in other folders)
